--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,145 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, ol{
+  text-align: center;
+  font-family:  Vegur, Georgia, "Times New Roman", sans-serif;
+  margin: 20px;
+}
+
+ol{
+  font-family:  Vegur, Georgia, "Times New Roman", sans-serif;
+  margin: 20px;
+
+} 
+
+.card-grid{
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card-gif{
+  align-content: center;
+  border: 1px solid gray;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.card-gif p {
+padding: 5px;
+text-align: center;
+}
+
+.card-gif img {
+  max-height: 170px;
+}
+
+
+.centrado{
+    
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+.Logo{
+  margin-right: 40px;
+  margin-left: 40px;
+  
+
+}
+
+.AddCategory{
+
+  display: flex;
+  justify-content: center;
+
+}
+
+.Search{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+input{
+  margin: 10px;
+}
+
+ 
+.container{
+
+  
+display: grid;
+grid-template-columns: repeat(3, 1fit);
+
+gap: 2px;
+
+ 
+}
+
+.container .card{
+  width: 330px;
+  height: 430px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(0, 0,0, 2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  transition: all 0.25s;
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  cursor: pointer;
+
+  
+
+
+}
+
+
+
+.container .card:hover{
+  transform: translateY(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0,0, 2);
+
+}
+
+.container .card img{
+  width: 330px;
+  height: 290px;
+  
+
+}
+
+
+.container .card h4{
+  font-weight: 600;
+}
+
+.container .card b  p{
+padding: 0 1rem;
+font-size: 16px;
+font-weight: 300;
+
+}
+
+.container .card Link {
+  font-weight: 500;
+  text-decoration: none;
+  color: #343434;
+}
+
+.title{
+  width: 100%;
+  height: 100%;
+  line-height: 1.6;
+}
+
